--- a/index.css
+++ b/index.css
@@ -1,110 +1,121 @@
 @charset "utf-8";
 /* CSS Document */
-@font-face
-{
-	font-family:Bahnschrift;
-	src: url(file/Bahnschrift.ttf);
+* {
+  box-sizing: border-box;
 }
-@font-face
-{
-	font-family:Trebuchet;
-	src: url(file/Trebuchet.ttf);
+body {
+  margin: 0;
+  background-color: #f1f1f1;
+  font-family: Arial, Helvetica, sans-serif;
 }
-@font-face
-{
-	font-family:Bebas;
-	src: url(file/Bebas.ttf);
+.header {
+	background-color: #333;
+	background-size: 100%;
+	padding: 0px;
+	padding-bottom: 5px;
 }
-.wrapper
-{
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
-	background-size: 100% auto;
-	font-family: Bahnschrift;
+.navbar {
+  	top: 0;
+  	overflow: hidden;
+  	background-color: goldenrod;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-.mySlides
-{
-	display:none;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
+.navbar span {
+	float: right;
+	background-size: 100%;
 }
-.wrapper header
-{
-	width:100%;
-	height: 65px;
-	background-color: #1E1E1E;
+.navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: Trebuchet MS;
 }
-.wrapper header logo
-{
-	position:fixed;
-	color: white;
-	font-size: 40px;
-	padding: 10px;
-	font-family:Bahnschrift;
-}
-.navbar
-{
-	position:fixed;
-	float:left;
-	margin-top:65px;
-	width:100%;
-	color: white;
-	font-size: 25px;
-	font-family:Bahnschrift;
-	padding:10px;
-}
-.navbar span
-{
-	float:right;
-}
-.navbar:hover
-{
-	background-color:red;
-	transition-duration: 0.5s;
-}
-.wrapper main table
-{
-	margin-top:150px;
-	width:80%;
-	font-family:Trebuchet;
-}
-.wrapper main table tr th
-{
-	font-size: 40px;
-	color: white;
-	
-}
-.wrapper main table tr td
-{
-	font-size: 25px;
-	color: white;
-	text-align:center;
+.dropdown {
+  float: left;
+  overflow: scroll;
 }
 
-.wrapper footer
-{
-	position: fixed;
-	bottom: 0;
-	width:100%;
-	color: white;
-	font-family:Bahnschrift;
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font: inherit;
+  margin: 0;
 }
-.wrapper footer table
-{
-	width:100%;
-	text-align:center;
-	font-size:15px;
-	padding-bottom:5px;
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: #007EFF;
 }
-a
-{
-	text-decoration:none;
-	color:inherit;
-	margin-right: 30px;
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  background-color: #f9f9f9;
+  width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content .headerdd {
+  background: #007EFF;
+  padding: 5px;
+  color: white;
+text-align: left;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+  background-color: #ccc;
+  height: 250px;
+}
+
+.column a {
+  float: none;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.column a:hover {
+  background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.content {
+  padding: 15px;
+}
+
+.footer{
+	text-align: center;
 }
