--- a/index.css
+++ b/index.css
@@ -1,121 +1,64 @@
 @charset "utf-8";
 /* CSS Document */
-* {
-  box-sizing: border-box;
-}
+
 body {
   margin: 0;
-  background-color: #f1f1f1;
   font-family: Arial, Helvetica, sans-serif;
 }
-.header {
-	background-color: #333;
-	background-size: 100%;
-	padding: 0px;
-	padding-bottom: 5px;
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
-.navbar {
-  	top: 0;
-  	overflow: hidden;
-  	background-color: goldenrod;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+
+.topnav span{
+	float: left;
+	padding-top: 15px;
 }
-.navbar span {
-	float: right;
-	background-size: 100%;
-}
-.navbar a {
+
+
+.topnav a {
   float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
-  font-family: Trebuchet MS;
-}
-.dropdown {
-  float: left;
-  overflow: scroll;
+  font-size: 15px;
 }
 
-.dropdown .dropbtn {
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: #007EFF;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  left: 0;
-  background-color: #f9f9f9;
-  width: 100%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content .headerdd {
-  background: #007EFF;
-  padding: 5px;
-  color: white;
-text-align: left;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 10px;
-  background-color: #ccc;
-  height: 250px;
-}
-
-.column a {
-  float: none;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.column a:hover {
+.topnav a:hover {
   background-color: #ddd;
+  color: black;
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+/*.topnav a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+*/
+.topnav .icon {
+  display: none;
 }
 
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    height: auto;
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
 }
 
-.content {
-  padding: 15px;
-}
-
-.footer{
-	text-align: center;
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
