--- a/index.css
+++ b/index.css
@@ -1,64 +1,277 @@
 @charset "utf-8";
 /* CSS Document */
-
-body {
+@font-face
+{
+	font-family:Bahnschrift Trebuchet "BebasNeue Regular";
+	src: url(file/Bahnschrift.ttf);
+	src: url(file/Trebuchet.ttf);
+	src: url(file/BebasNeue.ttf);
+}
+.body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
 }
+.header {
 
+}
 .topnav {
-  overflow: hidden;
-  background-color: #333;
+  position: sticky;
+  top: 0;
+  background-color: #00B6F8;
+  font-family: Bahnschrift;
+  height: 65px;
+	box-shadow: 0px 2px 10px 0px black;
 }
-
-.topnav span{
+.navLogo{
 	float: left;
+}
+.navLogo #bkpsdmdLogo {
+	height: 35px;
 	padding-top: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
+.navRight {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	background-color: #00B6F8;
 
-.topnav a {
+}
+.navRight a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 25px 20px 20px 20px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 17px;
+
 }
 
-.topnav a:hover {
+.topnav a.active {
+  background-color: white;
+  color: black;
+}
+
+.topnav .icon {
+  display: none;
+	padding: 20px 20px 20px 20px;
+}
+
+.dropdown {
+  float: left;
+
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 24px 20px 20px 20px;
+  background-color: inherit;
+  font-family: inherit;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 5px 10px 0px black;
+  z-index: 1;
+ overflow: hidden;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 10px 20px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 15px; 
+  min-width: 160px;
+}
+
+.navRight a:hover, .dropdown:hover .dropbtn {
+  background-color: white;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content{
+
+}
+.dropdown .dropdown-content a:hover {
   background-color: #ddd;
   color: black;
 }
 
-/*.topnav a.active {
-  background-color: dodgerblue;
-  color: white;
-}
-*/
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+@media screen and (max-width: 1050px) {
+  .navRight a:not(:empty), .dropdown .dropbtn { 
+	  display: none;
+	}
   .topnav a.icon {
-    float: right;
+	float: right;
     display: block;
+	top: 0;
   }
+.show {
+	display: block;
+}
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+@media screen and (max-width: 1050px) {
+  .topnav.responsive {
+	  position: sticky;
+	  float: left;
+	  width: 100%;
+	}
   .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+	position: absolute;
+	right: 0;
+	top:0;
   }
+	.topnav.responsive .navRight {
+		padding-top: 70px;
+	}
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+  .topnav.responsive .dropdown {
+	  float: none;
+	}
+  .topnav.responsive .dropdown-content {
+	  position: relative;
+	}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+.pidato-kaban {
+	background-color: beige;
+	padding-bottom: 0px;
+	overflow: hidden;
+	font-family: Bahnschrift;
+	text-align: center;
+}
+.pidato-kaban p {
+	font-size: 20px;
+	padding-left: 30px;
+	text-align: left;
+}
+.pidato-kaban img {
+	float: right;
+	width: 270px;
+	position: inherit;
+	bottom: 0px;
+	right: 0px;
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 600px) {
+  .pidato-kaban p {font-size: 15px}
+}
+
+.footer{
+	text-align: center;
+	font-family: Bahnschrift;
+	background-color: black;
+	color: white;
+	padding: 5px;
+}
+
+/*--------------------------------------- SlideShow -----------------------------------*/
+.mySlides {
+	display: none;
+}
+img {
+	vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  width: auto;
+  position: inherit;
+  margin-left: 70px;
+	margin-right: 70px;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  padding: 10px;
+  color: red;
+  font-weight: bold;
+  font-size: 30px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {	
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: black;
+  font-size: 30px;
+	font-family: Bahnschrift;
+  padding: 8px 12px;
+  position: inherit;
+  bottom: 8px;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: inherit;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 10px 2px 10px 0px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.0s;
+}
+
+@keyframes fade {
+  from {opacity: 0.4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 600px) {
+  .prev, .next,.text {font-size: 15px}
 }
