--- a/index.css
+++ b/index.css
@@ -173,6 +173,9 @@
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
   .pidato-kaban p {font-size: 15px}
+	.pidato-kaban img{
+		width: 500px;
+	}
 }
 
 .footer{
