--- a/index.css
+++ b/index.css
@@ -172,8 +172,10 @@
 }
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
-  .pidato-kaban p {font-size: 15px}
-	.pidato-kaban img{
+  .pidato-kaban p {
+	  font-size: 15px
+	}
+  .pidato-kaban img{
 		width: 500px;
 	}
 }
