--- a/index.css
+++ b/index.css
@@ -176,7 +176,11 @@
 	  font-size: 15px
 	}
   .pidato-kaban img{
-		width: 500px;
+		width: 400px;
+	  margin-right: auto;
+	  margin-left: auto;
+	  display: block;
+	  
 	}
 }
 
