--- a/index.css
+++ b/index.css
@@ -176,7 +176,7 @@
 	  font-size: 15px
 	}
   .pidato-kaban img{
-	  width: 400px;
+	  width: 50%;
 	  margin-right: auto;
 	  margin-left: auto;
 	  display: block;
