--- a/index.css
+++ b/index.css
@@ -174,14 +174,14 @@
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
   .pidato-kaban p {
-	  font-size: 15px
+	  font-size: 15px;
+	  padding: 5px;
 	}
   .pidato-kaban img{
 	  width: 50%;
 	  margin-right: auto;
 	  margin-left: auto;
 	  display: block;
-	  
 	}
 }
 
