--- a/index.css
+++ b/index.css
@@ -181,7 +181,9 @@
 	  width: 60%;
 	}
 }
-
+* {
+  box-sizing: border-box;
+}
 .asn-rekap {
 	position: static;
 	overflow: hidden;
@@ -192,30 +194,22 @@
 .chart-rekap {
 	display: flex;
 	flex-wrap: wrap;
-	font-size: 30px;
 	margin-bottom: 50px;
-	justify-content: space-around;
 	padding-bottom: 20px;
 }
 .flex-item-half1 {
-  padding: 10px;
   flex: 25%;
-  max-width: 300px;
 }
 .flex-item-half2 {
-  padding: 10px;
   flex: 25%;
-  max-width: 300px;
+
 }
 .flex-item-half3 {
-  padding: 10px;
   flex: 25%;
-  max-width: 300px;
+
 }
 .flex-item-half4 {
-  padding: 10px;
-  flex: 25%;
-  max-width: 300px;
+  flex: 25%;	
 }
 
 .footer{
