--- a/index.css
+++ b/index.css
@@ -23,7 +23,6 @@
 }
 .navLogo{
 	float: left;
-	
 }
 .navLogo #bkpsdmdLogo {
 	height: 35px;
@@ -33,11 +32,10 @@
 }
 
 .navRight {
-	float: right;
 	padding-top: 0px;
 	padding-bottom: 0px;
 	background-color: #00B6F8;
-	justify-content: flex-end;
+	float: left;
 
 }
 .navRight a {
@@ -263,8 +261,8 @@ img {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
+  color:red;
+  font-size: 20px;
   padding: 8px 12px;
   position: inherit;
   top: 0;
@@ -273,9 +271,9 @@ img {
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 10px 2px 10px 0px;
+  height: 10px;
+  width: 10px;
+  margin: 0px 0px 20px 0px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
