--- a/index.css
+++ b/index.css
@@ -220,7 +220,6 @@ img {
 /* Slideshow container */
 .slideshow-container {
   width: auto;
-  position: inherit;
   margin-left: 50px;
 	margin-right: 50px;
 }
@@ -239,7 +238,7 @@ img {
 
 /* Position the "next button" to the right */
 .next {	
-  right: 0;
+	right: 20px;
   border-radius: 3px 0 0 3px;
 }
 
@@ -254,7 +253,6 @@ img {
   font-size: 30px;
 	font-family: Bahnschrift;
   padding: 8px 12px;
-  position: inherit;
   bottom: 8px;
   text-align: center;
 }
@@ -262,10 +260,8 @@ img {
 /* Number text (1/3 etc) */
 .numbertext {
   color:red;
-  font-size: 20px;
+  font-size: 30px;
   padding: 8px 12px;
-  position: inherit;
-  top: 0;
 }
 
 /* The dots/bullets/indicators */
@@ -277,7 +273,7 @@ img {
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
-  transition: background-color 0.6s ease;
+  transition: 0.6s ease;
 }
 
 .active, .dot:hover {
@@ -297,7 +293,7 @@ img {
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
-  .prev, .next,.text {
+  .prev, .next, .text, .numbertext {
 	  font-size: 15px
 	}
 	.slideshow-container {
