--- a/index.css
+++ b/index.css
@@ -100,8 +100,7 @@
   color: black;
 }
 
-.dropdown:hover .dropdown-content{
-}
+.dropdown:hover .dropdown-content{}
 .dropdown .dropdown-content a:hover {
   background-color: #ddd;
   color: black;
