--- a/index.css
+++ b/index.css
@@ -185,7 +185,7 @@
 .asn-rekap {
 	position: static;
 	overflow: hidden;
-	background-color: whitesmoke;
+	background-color: white;
 	font-family: Bahnschrift;
 	text-align: center;
 }
