--- a/index.css
+++ b/index.css
@@ -1,12 +1,24 @@
 @charset "utf-8";
 /* CSS Document */
-@font-face
-{
-	font-family:Bahnschrift Trebuchet "BebasNeue Regular";
-	
-	src: url(file/Bahnschrift.ttf);
-	src: url(file/Trebuchet.ttf);
-	src: url(file/BebasNeue.ttf);
+@font-face {
+   font-family: FirstFont;
+   src: url("file/Trebuchet.ttf");
+}
+@font-face {
+   font-family: SecondFont;
+   src: url("file/Bahnschrift.ttf");
+}
+@font-face {
+   font-family: ThirdFont;
+   src: url("file/BebasNeue.otf");
+}
+@font-face {
+   font-family: FourthFont;
+   src: url("file/.otf");
+}
+/*===============================================================================*/
+* {
+   font-family: FirstFont;
 }
 .body {
   margin: 0px;
@@ -18,7 +30,6 @@
   position: sticky;
   top: 0;
   background-color: #00B6F8;
-  font-family: Bahnschrift;
   height: 65px;
   box-shadow: 0px 2px 10px 0px black;
 }
@@ -158,7 +169,6 @@
 	background-color: beige;
 	padding-bottom: 0px;
 	overflow: hidden;
-	font-family: Bahnschrift;
 	text-align: center;
 }
 .pidato-kaban p {
@@ -186,7 +196,6 @@
 	position: static;
 	overflow: hidden;
 	background-color: white;
-	font-family: Bahnschrift;
 	text-align: center;
 }
 .chart-rekap {
@@ -203,6 +212,7 @@
 /* ================================== Footer Complete ======================================== */
 * {
 	box-sizing: border-box;
+	font-family: SecondFont;
 }
 /* Create three unequal columns that floats next to each other */
 .column {
@@ -212,7 +222,6 @@
 	background-color: #019FA5;
 	color: white;
 	height: 300px;
-	font-family: Bahnschrift;
 }
 .first{
 	width: 20%;
