--- a/index.css
+++ b/index.css
@@ -230,33 +230,28 @@
 .first img {
 	width: 100%;
 }
+
 .second {
- 	width: 30%;
-	text-align: justify;
+ 	width: 35%;
+	text-align: left;
 	background-color: #01B3BA;
 }
+.second img{
+	width: 40px;
+	margin-right: 10px;
+}
+
 .third {
   width: 20%;
 	background-color: #019FA5;
 }
-.third .fa {
- font-size: 20px;
-  text-align: left;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
-color: white;
-	
+.third img {
+	width: 40px;
+	margin-left: 5px;
 }
-.third .fa:hover {
-    opacity: 0.7;
-}
-.third a{
-	width: 100%;
-	
-}
+
 .fourth{
-	width: 30%;
+	width: 25%;
 	background-color: #01B3BA;
 	padding-bottom: 20px;
 }
