--- a/index.css
+++ b/index.css
@@ -29,9 +29,8 @@
    src: url("file/Font/segoeui.ttf");
 }
 /*===============================================================================*/
-
 .body {
-  margin: 0px;
+
 }
 .header {
 
@@ -42,11 +41,10 @@
   background-color: #00B6F8;
   height: 65px;
   box-shadow: 0px 2px 10px 0px black;
-	font-family: Trebuchet;
+  font-family: Trebuchet;
 }
 .navLogo{
 	float: left;
-	
 }
 .navLogo #bkpsdmdLogo {
 	height: 45px;
@@ -179,17 +177,20 @@
 .pidato-kaban {
 	background-color: beige;
 	padding-bottom: 40px;
-	padding-top: 40px;
 	overflow: hidden;
 	text-align: center;
 }
 .pidato-kaban h2{
 	font-family: FreeHand;
-	font-size: 40px;
+	font-size: 50px;
+	color: #189205;
 }
-.pidato-kaban nd{
+.pidato-kaban h2 p{
 	font-family: Bahnschrift;
 	font-size: 20px;
+	text-align: center;
+	color: black;
+	margin-top: 0px;
 }
 .pidato-kaban p {
 	font-size: 20px;
@@ -201,6 +202,7 @@
 .pidato-kaban img {
 	float: right;
 	width: 300px;
+	margin-bottom: 0px;
 }
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
@@ -212,15 +214,18 @@
 	  width: 60%;
 	}
 }
-/* =================================== CHART =========================================*/
+/* =================================== STATISTIK =========================================*/
 .asn-rekap {
-	margin-top: 50px;
+	margin-top: 20px;
 	margin-bottom: 50px; 
 	position: static;
 	overflow: hidden;
 	background-color: white;
 	text-align: center;
 	font-family: Bahnschrift;
+}
+.asn-rekap h2 {
+	margin-bottom: -20px;
 }
 .chart-rekap {
 	display: flex;
@@ -273,18 +278,19 @@
 .third img {
 	width: 40px;
 	margin-left: 5px;
+	padding-bottom: 20px;
 }
 
 .fourth{
 	width: 25%;
 	background-color: #01B3BA;
 	padding-bottom: 20px;
-	padding-top: 5px;
+	padding-top: 10px;
 }
 .fourth p {
-	text-align: center;
-	padding-top: 5px;
-	padding-bottom: 20px;
+	text-align: left;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 .fourth img{
 	margin-left: 10%;
