--- a/index.css
+++ b/index.css
@@ -29,11 +29,11 @@
    src: url("file/Font/segoeui.ttf");
 }
 /*===============================================================================*/
-.body {
-
+body {
+	margin: 0;
 }
 .header {
-
+	object-fit: cover;
 }
 .topnav {
   position: sticky;
@@ -173,6 +173,29 @@
     text-align: left;
   }
 }
+
+/*======================================== INFO GRAFIS ========================================*/
+.infoGrafis {
+	background-color: #FFF4F4;
+	padding-top: 10px;
+}
+.infoGrafis h2 {
+	margin-top: 30px;
+	text-align: center;
+	font-family: Bahnschrift;
+}
+.infoGrafis img{
+	width: 100%;
+	
+}
+.mySlides
+{
+	align-content: center;
+	justify-content: center;
+	margin-top: 10px;
+	/*box-shadow: 0px 0px 10px 2px black;*/
+}
+
 /* ============================================ SAMBUTAN KABAN ==============================*/
 .pidato-kaban {
 	background-color: beige;
@@ -241,9 +264,8 @@
 /* ================================== Footer Complete ======================================== */
 * {
 	box-sizing: border-box;
-	
 }
-/* Create three unequal columns that floats next to each other */
+
 .column {
 	overflow: hidden;
 	float: left;
@@ -252,10 +274,10 @@
 	color: white;
 	height: 260px;
 	font-family: Raleway-Medium;
+	font-size: 15px;
 }
 .first{
-	width: 20%;
-	
+	width: 22.5%;
 } 
 .first img {
 	width: 100%;
@@ -273,7 +295,7 @@
 
 .third {
   width: 20%;
-	background-color: #019FA5;
+  background-color: #019FA5;
 }
 .third img {
 	width: 40px;
@@ -282,7 +304,7 @@
 }
 
 .fourth{
-	width: 25%;
+	width: 22.5%;
 	background-color: #01B3BA;
 	padding-bottom: 20px;
 	padding-top: 10px;
@@ -309,99 +331,5 @@
 	{
 		width: 70%;
 		margin-left: 15%;
-	}
-}
-
-/*--------------------------------------- SlideShow -----------------------------------*/
-.mySlides {
-	display: none;
-	padding-top: 0px;
-}
-img {
-	vertical-align: middle;
-}
-
-/* Slideshow container */
-.slideshow-container {
-  width: auto;
-  margin-left: 50px;
-	margin-right: 50px;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  padding: 10px;
-  color: red;
-  font-weight: bold;
-  font-size: 30px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {	
-	right: 20px;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: black;
-  font-size: 30px;
-	font-family: Bahnschrift;
-  padding: 8px 12px;
-  bottom: 8px;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color:red;
-  font-size: 30px;
-  padding: 8px 12px;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin: 0px 0px 20px 0px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.0s;
-}
-
-@keyframes fade {
-  from {opacity: 0.4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 600px) {
-  .prev, .next, .text, .numbertext {
-	  font-size: 15px
-	}
-	.slideshow-container {
-  		margin-left: 0px;
-		margin-right: 0px;
 	}
 }
