--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
 	margin: 0;
 }
 .header {
-	object-fit: cover;
+
 }
 .topnav {
   position: sticky;
@@ -184,14 +184,12 @@ body {
 	text-align: center;
 	font-family: Bahnschrift;
 }
-.infoGrafis img{
-	width: 100%;
-	
+.infoGrafis img {
+	width: 95%;
+	margin: auto;
 }
 .mySlides
 {
-	align-content: center;
-	justify-content: center;
 	margin-top: 10px;
 	/*box-shadow: 0px 0px 10px 2px black;*/
 }
@@ -199,6 +197,8 @@ body {
 /* ============================================ SAMBUTAN KABAN ==============================*/
 .pidato-kaban {
 	background-color: beige;
+	/*background-image: url(images//index_pict/1.jpg);
+	background-size: cover;*/
 	padding-bottom: 40px;
 	overflow: hidden;
 	text-align: center;
@@ -224,8 +224,8 @@ body {
 }
 .pidato-kaban img {
 	float: right;
+	margin-right: 0;
 	width: 300px;
-	margin-bottom: 0px;
 }
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
