--- a/index.css
+++ b/index.css
@@ -102,8 +102,8 @@ body {
   min-width: 160px;
   box-shadow: 0px 5px 10px 0px black;
   z-index: 1;
-	overflow: hidden;
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  overflow: hidden;
+  transition: all 0.5s ease;
 }
 #menu1
 {
