--- a/profil.css
+++ b/profil.css
@@ -179,42 +179,68 @@ body {
 	background-color: beige;
 	/*background-image: url(images//index_pict/1.jpg);
 	background-size: cover;*/
-	padding-bottom: 40px;
 	overflow: hidden;
-	text-align: center;
+	text-align: justify;
+	padding: 10px;
 }
-.visiMisi h2{
+.meranginBaru{
+	display: block;
+	margin: auto;
+	align-content: center;
+}
+.bupatiWabup {
+	display: block;
+	margin: auto;
+	align-content: center;
+}
+.visiMisi h1{
 	font-family: FreeHand;
+	text-align: center;
 	font-size: 50px;
 	color: #189205;
 }
-.visiMisi h2 p{
+.visiMisi h1 p{
 	font-family: Bahnschrift;
 	font-size: 20px;
 	text-align: center;
 	color: black;
-	margin-top: 0px;
 }
-.visiMisi p {
+
+.visiMisi h2 {
+	font-family: FreeHand;
+	font-size: 30px;
+	text-align: left;
+	color: #189205;
+}
+.visiMisi h3 {
+	font-family: SegoeUI;
+	text-align: center;
+	font-size: 25px;
+}
+.visiMisi h4 {
+	font-family: SegoeUI;
+	text-align: center;
 	font-size: 20px;
-	padding-left: 30px;
-	padding-right: 30px;
+}
+.visiMisi li {
+	font-size: 20px;
 	text-align: left;
 	font-family: SegoeUI;
 }
-.visiMisi img {
-	float: right;
-	margin-right: 0;
-	width: 300px;
+.visiMisi p {
+	font-size: 20px;
+	font-family: SegoeUI;
 }
+
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 600px) {
   .visiMisi p {
 	  font-size: 15px;
 	  padding: 5px;
 	}
-  .visiMisi img{
-	  width: 60%;
+	.visiMisi li {
+	  font-size: 15px;
+	  padding: 5px;
 	}
 }
 
@@ -298,6 +324,81 @@ body {
 	  padding: 5px;
 	}
 }
+/* ============================================ STRUKTUR ORGANISASI ==============================*/
+.strukOrga {
+	background-color: beige;
+	/*background-image: url(images//index_pict/1.jpg);
+	background-size: cover;*/
+	padding-bottom: 40px;
+	overflow: hidden;
+	text-align: center;
+}
+.strukOrga h2{
+	font-family: FreeHand;
+	font-size: 50px;
+	color: #189205;
+}
+.strukOrga h2 p{
+	font-family: Bahnschrift;
+	font-size: 20px;
+	text-align: center;
+	color: black;
+	margin-top: 0px;
+}
+.strukOrga p {
+	font-size: 20px;
+	padding-left: 30px;
+	padding-right: 30px;
+	text-align: left;
+	font-family: SegoeUI;
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 600px) {
+  .strukOrga p {
+	  font-size: 15px;
+	  padding: 5px;
+	}
+}
+
+/* ============================================ TUPOKSI ==============================*/
+.tuPoksi {
+	background-color: beige;
+	/*background-image: url(images//index_pict/1.jpg);
+	background-size: cover;*/
+	padding-bottom: 40px;
+	overflow: hidden;
+	text-align: center;
+}
+.tuPoksi h2{
+	font-family: FreeHand;
+	font-size: 50px;
+	color: #189205;
+}
+.tuPoksi h2 p{
+	font-family: Bahnschrift;
+	font-size: 20px;
+	text-align: center;
+	color: black;
+	margin-top: 0px;
+}
+.tuPoksi p {
+	font-size: 20px;
+	padding-left: 30px;
+	padding-right: 30px;
+	text-align: left;
+	font-family: SegoeUI;
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 600px) {
+  .tuPoksi p {
+	  font-size: 15px;
+	  padding: 5px;
+	}
+}
+
+
 /* ================================== Footer Complete ======================================== */
 * {
 	box-sizing: border-box;
