Update visiMisi section styles and structure
Adjusted HTML structure in profil.html by moving the mission statement into a <p> inside the <h3> tag and resizing images for better layout. Updated profil.css to improve text alignment, line height, and padding for better readability in the visiMisi section.

--- a/profil.css
+++ b/profil.css
@@ -217,19 +217,23 @@ body {
 	text-align: center;
 	font-size: 25px;
 }
-.visiMisi h4 {
+.visiMisi h3 p {
 	font-family: SegoeUI;
 	text-align: center;
 	font-size: 20px;
 }
 .visiMisi li {
 	font-size: 20px;
-	text-align: left;
+	text-align: justify;
 	font-family: SegoeUI;
+	line-height: 200%;
 }
 .visiMisi p {
 	font-size: 20px;
 	font-family: SegoeUI;
+	text-align: justify;
+	padding-right: 5px;
+	line-height: 200%;
 }
 
 /* On smaller screens, decrease text size */
