Update color scheme and fix typo in profil.html
Adjusted background colors in index.css and profil.css for a more consistent color scheme. Fixed a typo in profil.html ('penataan iri' to 'penataan diri'). Updated StrukturOrganisasi.png image.

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ body {
 .topnav {
   position: sticky;
   top: 0;
-  background-color: #0099B8;
+  background-color: #0077b6;
   height: 65px;
   box-shadow: 0px 2px 10px 0px black;
   font-family: Trebuchet;
@@ -56,7 +56,7 @@ body {
 .navRight {
 	padding-top: 0px;
 	padding-bottom: 0px;
-	background-color: #0099B8;
+	background-color: #0077b6;
 	box-shadow: 0px 2px 10px 0px black;
 }
 .navRight a {
@@ -274,7 +274,7 @@ body {
 	overflow: hidden;
 	float: left;
 	padding: 10px;
-	background-color: #019FA5;
+	background-color: #0096c7;
 	color: white;
 	height: 260px;
 	font-family: Raleway-Medium;
@@ -290,7 +290,7 @@ body {
 .second {
  	width: 35%;
 	text-align: left;
-	background-color: #01B3BA;
+	background-color: #00b4d8;
 }
 .second img{
 	width: 40px;
@@ -299,7 +299,7 @@ body {
 
 .third {
   width: 20%;
-  background-color: #019FA5;
+  background-color: #0096c7;
 }
 .third img {
 	width: 40px;
@@ -309,7 +309,7 @@ body {
 
 .fourth{
 	width: 22.5%;
-	background-color: #01B3BA;
+	background-color: #00b4d8;
 	padding-bottom: 20px;
 	padding-top: 10px;
 }
