--- a/profil.css
+++ b/profil.css
@@ -38,7 +38,7 @@ body {
 .topnav {
   position: sticky;
   top: 0;
-  background-color: #0099B8;
+  background-color: #006d77;
   height: 65px;
   box-shadow: 0px 2px 10px 0px black;
   font-family: Trebuchet;
@@ -383,7 +383,6 @@ body {
 	  font-size: 40px;
 	}
 }
-
 /* ============================================ TUPOKSI ==============================*/
 .tuPoksi {
 	background-color: beige;
