--- a/layanan.css
+++ b/layanan.css
@@ -174,8 +174,8 @@ body {
   }
 }
 
-/* ============================================ Visi Misi ==============================*/
-.visiMisi {
+/* ============================================ Layanan BKN ==============================*/
+.layananBKN {
 	background-color: azure;
 	/*background-image: url(images//index_pict/1.jpg);
 	background-size: cover;*/
@@ -183,61 +183,14 @@ body {
 	text-align: justify;
 	padding: 20px;
 }
-.visiMisi h1{
-	font-family: FreeHand;
-	text-align: center;
-	font-size: 50px;
-	color: #0077b6;
-}
-.visiMisi h1 p{
+.layananBKN h1{
 	font-family: Bahnschrift;
-	font-size: 20px;
-	text-align: center;
-	color: #0077b6;
-	line-height: 0.1;
-}
-.meranginBaru {
-	display: block;
-	margin: auto;
-	align-content: center;
-	top: 0;
-}
-.bupatiWabup {
-	display: block;
-	margin: auto;
-	align-content: center;
-}
-
-.visiMisi h2 {
-	font-family: FreeHand;
-	font-size: 30px;
 	text-align: left;
-	color: #189205;
+	font-size: 40px;
+	color: #0077b6;
 }
-.visiMisi h3 {
-	font-family: 'Trebuchet MS';
-	text-align: center;
-	font-size: 25px;
-}
-.visiMisi h3 p {
-	font-family: Bahnschrift;
-	text-align: center;
-	font-size: 20px;
-	line-height: 150%;
-}
-.visiMisi li {
-	font-size: 20px;
-	text-align: justify;
-	font-family: SegoeUI;
-	line-height: 200%;
-	padding-right: 10px;
-}
-.visiMisi p {
-	font-size: 20px;
-	font-family: SegoeUI;
-	text-align: justify;
-	padding-right: 10px;
-	line-height: 200%;
+.LogoBKN {
+	width: 200px;
 }
 
 /* On smaller screens, decrease text size */
