--- a/profil.css
+++ b/profil.css
@@ -56,7 +56,7 @@ body {
 .navRight {
 	padding-top: 0px;
 	padding-bottom: 0px;
-	background-color: #0099B8;
+	background-color: #0077b6;
 	box-shadow: 0px 2px 10px 0px black;
 }
 .navRight a {
