--- a/layanan.css
+++ b/layanan.css
@@ -174,6 +174,101 @@ body {
   }
 }
 
+/*==================================== OVERLAY MENU ================================*/
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 10%;
+  left: 15%;
+  width: 70%;
+}
+.overlay-content img {
+	width: 100%;
+	height: auto;
+	
+	border-radius: 10px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 600px) {
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 0px;
+  right: 0px;
+  }
+}
+
+/* ============================================ Layanan BKD ==============================*/
+.layananBKD {
+	background-color: white;
+	/*background-image: url(images//index_pict/1.jpg);
+	background-size: cover;*/
+	overflow: hidden;
+	text-align: center;
+	padding: 20px;
+}
+.layananBKD h1 {
+	font-family: Bahnschrift;
+	text-align: center;
+	font-size: 40px;
+	color: #0077b6;
+	margin-top: 0px;
+}
+.layananBKD .layananKPG{
+	margin-top: 20px;
+}
+.layananBKD .layananPSDM{
+	margin-top: 50px;
+}
+
+.LogoBKD {
+	width: 200px;
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 600px) {
+	.layananBKD h1{
+		font-family: Bahnschrift;
+		text-align: center;
+		font-size: 30px;
+		color: #0077b6;
+	}
+	.LogoBKD {
+		width: 150px;
+	}
+}
+
 /* ============================================ Layanan BKN ==============================*/
 .layananBKN {
 	background-color: white;
@@ -235,16 +330,16 @@ body {
 	transition: 0.3s;
 }
 .flex-item-one {
-  flex: 10%;
+  flex: 20%;
 }
 .flex-item-two {
-  flex: 10%;
+  flex: 20%;
 }
 .flex-item-three {
-  flex: 10%;
+  flex: 20%;
 }
 .flex-item-four {
-  flex: 10%;
+  flex: 20%;
 }
 
 .flex-item-one sub, .flex-item-two sub, .flex-item-three sub, .flex-item-four sub {
